[gd_scene load_steps=53 format=2]

[ext_resource path="res://Fonts/noto_sans_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/noto_sans_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/noto_sans_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Textures/PauseButton.png" type="Texture" id=4]
[ext_resource path="res://Textures/BattleBG3.png" type="Texture" id=5]
[ext_resource path="res://Scene/story.tscn" type="PackedScene" id=6]
[ext_resource path="res://Wave1~3_Scene/Wave3.gd" type="Script" id=7]
[ext_resource path="res://BattleSystem/PauseScene.tscn" type="PackedScene" id=8]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt3.png" type="Texture" id=9]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt4.png" type="Texture" id=10]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt5.png" type="Texture" id=11]
[ext_resource path="res://AttackAnimation/Axe/Axe4.png" type="Texture" id=12]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt6.png" type="Texture" id=13]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt7.png" type="Texture" id=14]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt9.png" type="Texture" id=15]
[ext_resource path="res://AttackAnimation/Axe/Axe1.png" type="Texture" id=16]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt1.png" type="Texture" id=17]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt2.png" type="Texture" id=18]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt8.png" type="Texture" id=19]
[ext_resource path="res://AttackAnimation/Axe/Axe2.png" type="Texture" id=20]
[ext_resource path="res://AttackAnimation/Axe/Axe3.png" type="Texture" id=21]
[ext_resource path="res://AttackAnimation/Balrog/Retro Impact Effect Pack 5 A.png" type="Texture" id=22]
[ext_resource path="res://AttackAnimation/Bomb/Retro Impact Effect Pack 5 D.png" type="Texture" id=23]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt11.png" type="Texture" id=47]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt10.png" type="Texture" id=50]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt12.png" type="Texture" id=53]
[ext_resource path="res://Wave1~3_Scene/Wave3_Question.gd" type="Script" id=56]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_radius_bottom_right = 40

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.776471, 0.815686, 0.807843, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 64, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 128, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 192, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 256, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 320, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 384, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 448, 1152, 64, 64 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), null ],
"loop": false,
"name": "Balrog",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 50 ), ExtResource( 47 ), ExtResource( 53 ) ],
"loop": false,
"name": "DarkBolt",
"speed": 16.5
} ]

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": false,
"name": "Bomb",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 12 ), null ],
"loop": false,
"name": "Axe",
"speed": 10.0
} ]

[node name="Wave3" type="Node"]
script = ExtResource( 7 )

[node name="BattleBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="PauseButton" type="TextureButton" parent="BattleBackground"]
margin_left = 1764.0
margin_top = 6.0
margin_right = 2276.0
margin_bottom = 518.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )

[node name="Wave" type="Label" parent="BattleBackground"]
margin_left = 510.0
margin_top = 15.0
margin_right = 1410.0
margin_bottom = 165.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 6 )
text = "Wave 3/3"
align = 1
valign = 1

[node name="Question" type="Label" parent="BattleBackground"]
margin_left = 975.0
margin_top = 250.0
margin_right = 1875.0
margin_bottom = 591.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 6 )
align = 1
valign = 1
autowrap = true
script = ExtResource( 56 )

[node name="OpenStoryButton" type="Button" parent="BattleBackground/Question"]
margin_left = 624.0
margin_top = 335.0
margin_right = 900.0
margin_bottom = 399.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 7 )
text = "查看全文 ▼"

[node name="Enemy" type="Sprite" parent="BattleBackground/Question"]
position = Vector2( -487, 221 )
scale = Vector2( 0.562963, 0.521898 )

[node name="LabelBottomBackground" type="Label" parent="BattleBackground/Question"]
show_behind_parent = true
margin_top = 340.0
margin_right = 900.0
margin_bottom = 399.0
custom_styles/normal = SubResource( 28 )

[node name="LineEdit" type="LineEdit" parent="BattleBackground"]
margin_left = 46.0
margin_top = 717.0
margin_right = 1875.0
margin_bottom = 1031.0
custom_colors/cursor_color = Color( 0.00392157, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/read_only = SubResource( 26 )
custom_styles/focus = SubResource( 27 )
custom_styles/normal = SubResource( 4 )
align = 1
placeholder_text = "請輸入答案"
placeholder_alpha = 0.453
caret_blink = true
caret_blink_speed = 0.5

[node name="PauseScene" parent="BattleBackground" instance=ExtResource( 8 )]
visible = false

[node name="WindowDialog" parent="BattleBackground" instance=ExtResource( 6 )]

[node name="BalrogAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 490, 470 )
scale = Vector2( 8.254, 7.854 )
frames = SubResource( 25 )
animation = "Balrog"

[node name="DarkBoltAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 490, 490 )
scale = Vector2( 5.422, 5.773 )
frames = SubResource( 43 )
animation = "DarkBolt"

[node name="BombAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 491, 470 )
scale = Vector2( 7.281, 7.633 )
frames = SubResource( 51 )
animation = "Bomb"

[node name="AxeAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 460, 417 )
scale = Vector2( 1, 1.162 )
frames = SubResource( 52 )
animation = "Axe"

[node name="ChangeLevelTimer" type="Timer" parent="BattleBackground"]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BattleBackground/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="BattleBackground/Question/OpenStoryButton" to="." method="_on_OpenStoryButton_pressed"]
[connection signal="text_entered" from="BattleBackground/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="animation_finished" from="BattleBackground/BalrogAttackAnimation" to="." method="_on_BalrogAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/DarkBoltAttackAnimation" to="." method="_on_DarkBoltAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/BombAttackAnimation" to="." method="_on_BombAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/AxeAttackAnimation" to="." method="_on_AxeAttackAnimation_animation_finished"]
[connection signal="timeout" from="BattleBackground/ChangeLevelTimer" to="." method="_on_ChangeLevelTimer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
